[CrOS MultiDevice] Fix broken chrome://proximity-auth page.

This CL fixes a regression which replaced feature names on this page
with numbers representing the features. The regression was caused by
erroneous removal of the #include containing the operator<<() function
which prints the enum names.

Bug: 906836
Change-Id: Idb35e491ff379cc0ea97e63b57b4078a85efd0af
Reviewed-on: https://chromium-review.googlesource.com/c/1343350
Reviewed-by: Ryan Hansberry <hansberry@chromium.org>
Reviewed-by: Bailey Berro <baileyberro@chromium.org>
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609516}
Former-commit-id: 29ced3fcef80063c8d3feef7932ddd6ab08fbd5e